// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-19eq2ru-0 gomluZ"
>
  <h1
    class="profiles__Title-sc-19eq2ru-1 gZnSeh"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-19eq2ru-2 bVmYca"
  >
    <li
      class="profiles__Item-sc-19eq2ru-5 fibPAo"
    >
      <img
        class="profiles__Picture-sc-19eq2ru-4 gYrnCR"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-19eq2ru-3 gTGZje"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-19eq2ru-0 gomluZ"
>
  <h1
    class="profiles__Title-sc-19eq2ru-1 gZnSeh"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-19eq2ru-2 bVmYca"
  >
    <li
      class="profiles__Item-sc-19eq2ru-5 fibPAo"
    >
      <img
        class="profiles__Picture-sc-19eq2ru-4 gYrnCR"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-19eq2ru-3 gTGZje"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
